--- a/app/src/main/res/layout/activity_view_selected_image.xml
+++ b/app/src/main/res/layout/activity_view_selected_image.xml
@@ -42,202 +42,195 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:background="@drawable/border2">
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/border2"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="190dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/lableText"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/text_view_border"
-                        android:text="@string/label"
-                        android:textColor="@color/Orange"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/ConfidenceText"
-                        android:layout_width="90dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/text_view_border"
-                        android:text="@string/confidence"
-                        android:textColor="@color/Orange"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="190dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/label1"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/text_view_border"
-                        android:text="@string/one"
-                        android:textColor="@color/Orange"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/Confidence1"
-                        android:layout_width="90dp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/text_view_border"
-                        android:text="@string/empty"
-                        android:textColor="@color/Orange"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="190dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/label2"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/text_view_border"
-                        android:text="@string/two"
-                        android:textColor="@color/Orange"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/Confidence2"
-                        android:layout_width="90dp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/text_view_border"
-                        android:text="@string/empty"
-                        android:textColor="@color/Orange"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="190dp"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/label3"
-                        android:layout_width="100dp"
-                        android:layout_height="wrap_content"
-                        android:background="@drawable/text_view_border"
-                        android:text="@string/three"
-                        android:textColor="@color/Orange"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/Confidence3"
-                        android:layout_width="90dp"
-                        android:layout_height="match_parent"
-                        android:background="@drawable/text_view_border"
-                        android:text="@string/empty"
-                        android:textColor="@color/Orange"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="170dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/border2"
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/left_rotate"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="#0000"
-                            android:text="@string/left"
-                            android:textColor="@color/Orange"
-                            android:textSize="36sp"
-                            android:textStyle="bold" />
-
-                        <Button
-                            android:id="@+id/right_rotate"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="#0000"
-                            android:text="@string/right"
-                            android:textColor="@color/Orange"
-                            android:textSize="36sp"
-                            android:textStyle="bold" />
-
-                    </LinearLayout>
-
                     <Button
-                        android:id="@+id/crop_image"
+                        android:id="@+id/left_rotate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="#0000"
-                        android:text="@string/crop"
+                        android:text="@string/left"
                         android:textColor="@color/Orange"
                         android:textSize="36sp"
                         android:textStyle="bold" />
 
                     <Button
-                        android:id="@+id/classify_image"
+                        android:id="@+id/right_rotate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="#0000"
-                        android:text="@string/classify"
+                        android:text="@string/right"
                         android:textColor="@color/Orange"
                         android:textSize="36sp"
                         android:textStyle="bold" />
-
-                    <Button
-                        android:id="@+id/back_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="#0000"
-                        android:text="@string/back_emoji"
-                        android:textColor="@color/Orange"
-                        android:textSize="36sp"
-                        android:textStyle="bold" />
-
 
                 </LinearLayout>
 
+                <Button
+                    android:id="@+id/crop_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="#0000"
+                    android:text="@string/crop"
+                    android:textColor="@color/Orange"
+                    android:textSize="36sp"
+                    android:textStyle="bold"
+                    android:gravity="center"/>
+
+                <Button
+                    android:id="@+id/classify_image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="#0000"
+                    android:text="@string/classify"
+                    android:textColor="@color/Orange"
+                    android:textSize="36sp"
+                    android:textStyle="bold"
+                    android:gravity="center"/>
+
+                <Button
+                    android:id="@+id/back_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:background="#0000"
+                    android:text="@string/back_emoji"
+                    android:textColor="@color/Orange"
+                    android:textSize="36sp"
+                    android:textStyle="bold"
+                    android:gravity="center"/>
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp">
+
+                <LinearLayout
+                    android:layout_width="370dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center">
+
+                    <TextView
+                        android:id="@+id/lableText"
+                        android:layout_width="240dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/text_view_border"
+                        android:text="@string/label"
+                        android:textColor="@color/Orange"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/ConfidenceText"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/text_view_border"
+                        android:text="@string/confidence"
+                        android:textColor="@color/Orange"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="370dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center">
+
+                    <TextView
+                        android:id="@+id/label1"
+                        android:layout_width="240dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/text_view_border"
+                        android:text="@string/one"
+                        android:textColor="@color/Orange"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/Confidence1"
+                        android:layout_width="110dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/text_view_border"
+                        android:text="@string/empty"
+                        android:textColor="@color/Orange"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="370dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center">
+
+                    <TextView
+                        android:id="@+id/label2"
+                        android:layout_width="240dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/text_view_border"
+                        android:text="@string/two"
+                        android:textColor="@color/Orange"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/Confidence2"
+                        android:layout_width="110dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/text_view_border"
+                        android:text="@string/empty"
+                        android:textColor="@color/Orange"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="370dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:layout_gravity="center">
+
+                    <TextView
+                        android:id="@+id/label3"
+                        android:layout_width="240dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/text_view_border"
+                        android:text="@string/three"
+                        android:textColor="@color/Orange"
+                        android:textSize="14sp" />
+
+                    <TextView
+                        android:id="@+id/Confidence3"
+                        android:layout_width="110dp"
+                        android:layout_height="match_parent"
+                        android:background="@drawable/text_view_border"
+                        android:text="@string/empty"
+                        android:textColor="@color/Orange"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
 
             </LinearLayout>
 
