--- a/app/src/main/res/layout/activity_choose_classifier.xml
+++ b/app/src/main/res/layout/activity_choose_classifier.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Blue"
-    tools:context=".choose_classifier">
+    tools:context="com.soumio.mikes.photoai.choose_classifier">
 
     <ImageView
         android:id="@+id/titleImage"
