--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Blue"
-    tools:context=".Start">
+    tools:context="com.soumio.mikes.photoai.Start">
 
     <ImageView
         android:id="@+id/titleImage"
