--- a/app/src/main/res/layout/activity_view_selected_image.xml
+++ b/app/src/main/res/layout/activity_view_selected_image.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ViewSelectedImage"
+    tools:context="com.soumio.mikes.photoai.ViewSelectedImage"
     android:background="@color/Blue">
 
     <TextView
